--- a/Projeto_24_25/.vscode/settings.json
+++ b/Projeto_24_25/.vscode/settings.json
@@ -7,6 +7,9 @@
         "cache.h": "c",
         "stdlib.h": "c",
         "inet.h": "c",
-        "socket.h": "c"
+        "socket.h": "c",
+        "prototypes.h": "c",
+        "globals.h": "c",
+        "constants.h": "c"
     }
 }
