--redone folders v3 (server almost done)

--- a/Projeto_24_25/.vscode/settings.json
+++ b/Projeto_24_25/.vscode/settings.json
@@ -10,6 +10,7 @@
         "socket.h": "c",
         "prototypes.h": "c",
         "globals.h": "c",
-        "constants.h": "c"
+        "constants.h": "c",
+        "time.h": "c"
     }
 }
