--redone folders v3.5 (make server bugs corrected)

--- a/Projeto_24_25/server/Makefile
+++ b/Projeto_24_25/server/Makefile
@@ -1,20 +1,32 @@
 CC = gcc
 CFLAGS = -Wall -g -Iinclude
 BUILD_DIR = build
+SRC_DIR = src
+UTILS_DIR = ../utils
+TCP_DIR = $(SRC_DIR)/tcp
+UDP_DIR = $(SRC_DIR)/udp
 
-SRCS = src/*.c ../utils/common.c
+SRCS = $(SRC_DIR)/main.c $(SRC_DIR)/player.c \
+       $(wildcard $(TCP_DIR)/*.c) \
+       $(wildcard $(UDP_DIR)/*.c) \
+       $(UTILS_DIR)/common.c
 OBJS = $(SRCS:.c=.o)
 
-all: server 
+# Final executable
+EXEC = $(BUILD_DIR)/server
 
-server: $(OBJS)
-	$(CC) $(CFLAGS) -o $(BUILD_DIR)/server $(OBJS)
+all: $(EXEC) 
+	@echo "Server build complete!"
 
-run:
-	$(BUILD_DIR)/server $(ARGS)
+$(EXEC): $(OBJS)
+	@$(CC) $(CFLAGS) -o $(BUILD_DIR)/server $(OBJS)
+
+run: $(EXEC)
+	@$(EXEC) $(ARGS)
 
 %.o: %.c
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean:
-	rm -f src/*.o $(BUILD_DIR)/server ../utils/src/*.o
+	@rm -f $(OBJS) $(EXEC) $(UTILS_DIR)/common.o *.o
+	@echo "Server clean complete!"
