--file creation part 1

--- a/Projeto_24_25/.vscode/settings.json
+++ b/Projeto_24_25/.vscode/settings.json
@@ -11,6 +11,7 @@
         "prototypes.h": "c",
         "globals.h": "c",
         "constants.h": "c",
-        "time.h": "c"
+        "time.h": "c",
+        "common.h": "c"
     }
 }
