--- a/Projeto_24_25/Makefile
+++ b/Projeto_24_25/Makefile
@@ -10,14 +10,12 @@ client:
 	@$(MAKE) -C client --no-print-directory
 
 run-server:
-	@$(MAKE) -C server run --no-print-directory
+	@$(MAKE) -C server run ARGS="$(ARGS)" --no-print-directory
 
 run-client:
-	@$(MAKE) -C client run --no-print-directory
+	@$(MAKE) -C client run ARGS="$(ARGS)" --no-print-directory
 
 clean:
 	@$(MAKE) -C server clean --no-print-directory
 	@$(MAKE) -C client clean --no-print-directory
 	@echo "Clean complete!"
-
-
